tests/ui/issues/issue-64792-bad-unicode-ctor.rs
struct X {}

const Y: X = X("รถ"); //~ ERROR expected function, tuple struct or tuple variant, found struct `X`

fn main() {}
